    * Filtering: added year suffix for date filters in the collection browser.
    * Last.fm features that require user authentication are now disabled
      by default.
    * Ignore "DJ" prefix when sorting in collection browser. (BR 181955)
      Patch by Richard Longland <rlongland@hotmail.com>.

  BUGFIXES:
    * Fix track number on DAAP shares. Patch by Silvio Frischknecht. (BR 235030)
    * Fixed filtering by rating in the playlist. (BR 240293)
    * The scripts categories are now translatable. (BR 240563)
    * Fixed Amarok 1.4 Database Importer not importing statistics and lyrics of
      tracks that are not yet in database. Thanks to Matěj Laitl for the patch.
      (see comments on BR 218996)
    * Fixed always playing first track when adding tracks to empty playlist with
      random mode on. Patch by Anton Gritsay <anton@angri.ru> (BR 240452)
    * Directories that were once part of the collection but not anymore may not
      have been properly removed, leading to files outside the collection being
      scanned. (BR 243532)
    * Fixed "genre" and other playlist groupings not working. (BR 243344)
    * Removed track progress effect on TrayIcon as it caused several problems
      (also caused by a bogus implementation of the KSNI class)
      (BR 233506, BR 240463, BR 231539, BR 232578, BR 232312).
    * Fixed track name in main window title incorrectly changing when editing
      tag info for another track. Thanks to Anton Gritsay <anton@angri.ru> for
      the patch (BR 220521)
    * Splitted desktop so mime types can be allocated in a better way
      (BR 242292).
    * Fixed some tracks not being scanned when they had corrupted MusicBrainz
      IDs. Thanks to Matěj Laitl <matej@laitl.cz> for the patch. (BR 236227)
    * Fixed crash when navigating using "Places" in the file browser. (BR 240338)
    * Fixed error dialog popup if the stored directory is no longer accessible
      when using the file browser. (BR 234286)